Profile Chooser/Views: Only one HoverButton can be highlighted at a time.

When mouse hovering and tabbing through the buttons in the ProfileChooserView
at the same time, it is possible to get two different buttons to be highlighted.
Prevent this by requesting focus on hover, then highlighting on focus only. This
prevents confusion about which item actually has keyboard focus.

Bug: 785164, 785262
Change-Id: Id379f2c373307f2c49dbce58cf40d3d61f9f324e